fix card size on mobile

--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -43,7 +43,8 @@
     }
 
     .card{
-        height: auto !important;
+       /* height: auto !important;*/
+        height: 60vw !important;
         width: 40vw !important;
     }
 
